@@ -1,7 +1,6 @@
 AUX app.ini 1553 BLAKE2B a4e9d0aecb76d6e0150f74f98454a28923f7b2cac5a6e5a8ffb0411bbfcaab883c77f83e115946d328104023706c33a4d9c673a4752d0a007a57be5e64c81e07 SHA512 52cc76b5af4cfe7cf0167b40560e026d5611aace93b8fdb69bf5bcb33536dbc4fe544d7dea51604ec85473b04f1d0252f7fff62f9d6e186927dc4dec1a1d4e17
 AUX drone.service 711 BLAKE2B 7ddc0c7ef8b26ae2cffd62e211fa2ef5861ccd1e728f25cbbf0b1599430344bc6d0c0173c1a14eb4585dde76199df20214c8d09e97466b603b10b9c9042ebd62 SHA512 5535aab31147a114434944b7ce11ba5eadcb8356cc8db0d406dd2093976b06e604757aaba866ae921b4b705ed3c0939d1436272c4e4f07467881e7d1ef8c3b7a
 AUX drone.sh 591 BLAKE2B 81b437ab72793c3cbc82d4a49300eee45d8faffb6ad06ad3bfb194e07c7cc466875a7dcd08138e7ec9073a53885a3c3d94c862bcfac6d2e82639ca9d657581d0 SHA512 0772bbc0f92301d808e19d2a19f2169cb34ce30fb5253fb40db6d2b69a3ac8a050a3366280fb66ea520afbd16a2882949ebeec53662ee323f2f1058a1339ffc1
-EBUILD drone-1.9.1-r1.ebuild 928 BLAKE2B 4f3e750dfd90c7ddbdb3b95170e17ba93b9944e264066b9bf5714a13494ee9e2707de04c1adf5568adc44f52e9c2435cc7587908274f2ab2a96a2cd280d019ac SHA512 fd4eeed82bb2414eedcec9607faa5f566278922161cb751c15a7b13a270cb3d872386b7978e95de962939a3e9a21ba091616d94782c6de4e58ec60c9bb872ad9
-EBUILD drone-1.9.2.ebuild 929 BLAKE2B 79b02b9e8be1bd254ce48c01bb2811326929965430c08148fc3950dfe1c5274d7fdb622ef7ea996e244bd01dbb71e32a906d490ccf0a41d8f99a87aba6311d1b SHA512 b0c019855c18aa7c023f4a9cae9cb47594aa7e15a07f03c82b115b7495de9f40a54b2fbae3caab2cbcbdd2fc0ef50941f80b3fe6119bb902aaca8eb5a903b3ba
-MISC ChangeLog 1862 BLAKE2B b525dc52063db360afb3d352a5f566234882a592f52e78d566e2383ba896ae50cb62aaecd1639e537dfb83689516bbcdbe12240f0996edb3a581320ba01f0072 SHA512 92d7d451a900f123b97b5d4528beeeccb3a2b7dae8a97a3b9800795a00f04456b46971457dd11eafde2858990aa6693017df3959a86737417a52067fe8d6a040
+EBUILD drone-1.9.2-r1.ebuild 944 BLAKE2B f2187d92e265f9f937010387d3b2a412268359a1a0f5793ce1040d6a4b47c655f23aa7dca019eb295a5a04ac613bb15cd46013183ed5918b435d2816682efcd7 SHA512 248ad210091c5482926090d539aaac7c534503faa3d7b522e00787adc9b1b3bff4558e22a6fda9d3a0d0a38afdf78bc6e8a3d8de2c22db764b8a894e9404d8a4
+MISC ChangeLog 2070 BLAKE2B a2b2bdf777b4abd282e3dad9cbd29fa9fb203453e487875a3f5eab99a788eec2e34a6abb80f55c2dd99aab051638248f4231e3b5d7040cada7950443847d7967 SHA512 7708c5ea8e78cdf8fd4bb788a1b1c311b4f910a744956e6c774986d507e918e45c9cb4015f53f5bb52b44a1668878145890e18c1eb2a8db0ff897bff76a67788
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
