@@ -1,4 +1,4 @@
-# Copyright 1999-2020 Gentoo Authors
+# Copyright 1999-2021 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
 EAPI="7"
@@ -15,7 +15,7 @@ KEYWORDS="~amd64"
 IUSE="sqlite mysql"
 
 RESTRICT="mirror"
-DEPEND=""
+DEPEND="!www-apps/drone"
 RDEPEND="acct-user/drone
 	app-emulation/docker
 	sqlite? ( dev-db/sqlite:3 )
